stop background flicker when scrolling on mobile

--- a/src/components/marketing/Grainient.module.css
+++ b/src/components/marketing/Grainient.module.css
@@ -3,4 +3,7 @@
   width: 100%;
   height: 100%;
   overflow: hidden;
+  transform: translateZ(0);
+  will-change: transform;
+  backface-visibility: hidden;
 }
